Model + Dataset Code

--- a/.gitignore
+++ b/.gitignore
@@ -4,9 +4,40 @@ ResEmoteNet/JAFFE_ResEmoteNet
 ResEmoteNet/FER
 ResEmoteNet/Fer_ResEmoteNet
 Research/CaersDataset
-Research
+Research/*
+Research/MainTakeaways.docx
 FER-CAPSULENET-FER2013-main.zip
 ResEmoteNet/cry.jpeg
 ResEmoteNet/test_img.jpg
 ResEmoteNet/test_img_2.jpg
 ResEmoteNet/testing.jpg
+Datasets/*
+!Datasets/*.ipynb
+
+Models/DDAMFN++/*
+Models/EmoNeXt/*
+Models/PAtt-Lite/*
+Models/ResNet50/*
+Models/ResEmoteNet/*
+
+!Models/EmoNeXt/EmoNeXt-master
+
+!Models/DDAMFN++/*.pdf
+!Models/EmoNeXt/*.pdf
+!Models/PAtt-Lite/*.pdf
+!Models/ResNet50/*.pdf
+!Models/ResEmoteNet/*.pdf
+
+!Models/DDAMFN++/*.docx
+!Models/EmoNeXt/*.docx
+!Models/PAtt-Lite/*.docx
+!Models/ResNet50/*.docx
+!Models/ResEmoteNet/*.docx
+
+!Models/DDAMFN++/*.ipynb
+!Models/EmoNeXt/*.ipynb
+!Models/PAtt-Lite/*.ipynb
+!Models/ResNet50/*.ipynb
+!Models/ResEmoteNet/*.ipynb
+
+ResEmoteNet
